display: Fix mouse events not working in preview

We need to save event areas with the correct transformation.

The following things need to be take into account:
 * Current cairo matrix (translations)
 * Widget allocation because it is painting on the parents widgets window
 * Cairo device offset, which GTK+ sets (but not for a full window redraw)

https://bugzilla.gnome.org/show_bug.cgi?id=681475